# rootmos-bot

./: Cargo.toml  README.md  build.rs  irc-config.json
.git-crypt/keys/default/0/: 0F8EEB985F9EE05BD35BAD03BB43FAF5535B14B7.gpg
src/: free_runner.rs  irc.rs  lib.rs  main.rs  serde_types.in.rs
src/db/: hashmap_kv.rs  mod.rs  rocksdb.rs  rocksdb_kv.rs  test.rs
